kubernetes/fluxcd/apps/base/actualserver/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: actualserver-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: actualserver
      app.kubernetes.io/name: actualserver
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 10293
